feat: new Heading

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <header>
             <h1 class="mainHeader">
-                Paweł Jemielianiuk - Strona domowa
+                Paweł Jemielianiuk - Strona domowa - pozdro git Hub!
             </h1>
         </header>
         <section>
